Added Octopuce USB PWM module to read tach signals off of engines because the SeaGauge G2 NMEA 2000 tach PGN is innacurate/unstable.

--- a/WhatTheHelmCanLib/WhatTheHelmCanLib.csproj
+++ b/WhatTheHelmCanLib/WhatTheHelmCanLib.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Devices\yapi.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="5.0.0" />
   </ItemGroup>
 
