Adding actisense NGT-1 gateway device.  Also considering eliminating CAN gateway listener classes and have the application listen for gateway device events directly.

--- a/WhatTheHelmCanLib/WhatTheHelmCanLib.csproj
+++ b/WhatTheHelmCanLib/WhatTheHelmCanLib.csproj
@@ -5,8 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ActisenseLibs\Actisense API CS Wrapper.dll" />
     <None Remove="ActisenseLibs\Actisense API CS Wrapper.pdb" />
+    <None Remove="ActisenseLibs\ActisenseComms.dll" />
     <None Remove="Devices\yapi.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="ActisenseLibs\Actisense API CS Wrapper.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ActisenseLibs\ActisenseComms.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
