--- a/WhatTheHelmFormsLib/WhatTheHelmFormsLib.csproj
+++ b/WhatTheHelmFormsLib/WhatTheHelmFormsLib.csproj
@@ -110,7 +110,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ccLogo.png" />
+    <Resource Include="ccLogo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
