--- a/WhatTheHelmRuntime/WhatTheHelmRuntime.csproj
+++ b/WhatTheHelmRuntime/WhatTheHelmRuntime.csproj
@@ -51,9 +51,6 @@
     <ApplicationIcon>iconfinder_Travel-Filled-21_3671972.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CodeArtEng.Gauge, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CodeArtEng.Gauge.2.0.0\lib\net40\CodeArtEng.Gauge.dll</HintPath>
-    </Reference>
     <Reference Include="Mitov.BasicLab, Version=8.0.0.1, Culture=neutral, PublicKeyToken=54b8a1f38c94221a" />
     <Reference Include="Mitov.InstrumentLab, Version=8.0.0.1, Culture=neutral, PublicKeyToken=d83fb7bf88b23f0b, processorArchitecture=MSIL" />
     <Reference Include="Mitov.InstrumentLabDigital, Version=8.0.0.1, Culture=neutral, PublicKeyToken=75c3f971405dc4fb" />
@@ -139,6 +136,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestForm.Designer.cs">
+      <DependentUpon>TestForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TrimControl.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -179,6 +182,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TestForm.resx">
+      <DependentUpon>TestForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TrimControl.resx">
       <DependentUpon>TrimControl.cs</DependentUpon>
     </EmbeddedResource>
