--- a/WhatTheHelmFormsLib/WhatTheHelmFormsLib.csproj
+++ b/WhatTheHelmFormsLib/WhatTheHelmFormsLib.csproj
@@ -55,6 +55,7 @@
     </Compile>
     <Compile Include="DashboardButtonArgs.cs" />
     <Compile Include="GearPressGauge.xaml.cs" />
+    <Compile Include="EngineSyncGauge.cs" />
     <Compile Include="RudderPosGauge.cs" />
     <Compile Include="OilPressGauge.xaml.cs" />
     <Compile Include="ScreenInterrogatory.cs" />
@@ -83,6 +84,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="GearPressGauge.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="EngineSyncGauge.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
